[package]
name = "lsm6dso16is-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "imu", "ispu", "low-power"]
repository = "https://github.com/STMicroelectronics/lsm6dso16is-rs"
description = """
    Platform-agnostic driver for the LSM6DSO16IS 6-axis IMU with integrated ISPU for edge AI, 
	sensor hub support, programmable interrupts, and ultra-low-power operation.
"""

[dependencies]
embedded-hal = "1.0.0"
bitfield-struct = "0.10.0"
half = { version = "1.7", default-features = false }
st-mems-bus = "1.0.1"
derive_more = { version = "2.0.1", default-features = false, features = ["try_from"] }
st-mem-bank-macro = "1.0.0"

# By default the bit order is assumed as Least Significant Bit.
[features]
default = []
passthrough = []
bit_order_msb = []

