[package]
name = "lsm6dso16is-rs"
version = "2.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "imu", "ispu", "low-power"]
repository = "https://github.com/STMicroelectronics/lsm6dso16is-rs"
description = """
    Platform-agnostic driver for the LSM6DSO16IS 6-axis IMU with integrated ISPU for edge AI,
	sensor hub support, programmable interrupts, and ultra-low-power operation.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield-struct = "0.10.0"
half = { version = "1.7", default-features = false }
st-mems-bus = "2.0.0"
derive_more = { version = "2.0.1", default-features = false, features = ["try_from"] }
st-mem-bank-macro = "2.0.0"

# Features
# --------
# - By default the async API is enabled via the `async` feature.
#   Enable `blocking` to use the blocking variant instead.
#
# - Bit order defaults to Least Significant Bit first.
#   Enable `bit_order_msb` to use Most Significant Bit first.
[features]
default = ["async"]
# Expose the asynchronous driver module.
async = []
# Expose the blocking driver module.
blocking = []
# Expose passthrough mode used for SensorHub.
passthrough = []
# Use Most Significant Bit first instead of the default LSB-first ordering.
bit_order_msb = []

[package.metadata.docs.rs]
all-features = true
